--- a/dtmoney/public/index.html
+++ b/dtmoney/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>dt money</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+
+    <title>dtmoney</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
